// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders given a basic type 1`] = `
<code
  className="sc-bwzfXH kJdBIT"
>
  <div
    className="sc-ifAKCX OCUpN"
  >
    /* An int */
  </div>
  <a
    href="/?typeExplorer=Int"
    onClick={[Function]}
  >
    <code
      className="sc-bdVaJa bGXATf"
    >
      Int
    </code>
  </a>
</code>
`;

exports[`renders given a complex type 1`] = `
<code
  className="sc-bwzfXH kJdBIT"
>
  <div
    className="sc-ifAKCX OCUpN"
  >
    /*  */
  </div>
  {
  <div
    className="sc-htpNat KtFsv"
  >
      
    <span
      className="sc-bxivhb bkkmIq"
    >
      field_one
    </span>
    : 
    <a
      href="/?typeExplorer=String"
      onClick={[Function]}
    >
      <code
        className="sc-bdVaJa bGXATf"
      >
        String
      </code>
    </a>
  </div>
  <div
    className="sc-htpNat KtFsv"
  >
      
    <span
      className="sc-bxivhb bkkmIq"
    >
      field_two
    </span>
    : 
    <a
      href="/?typeExplorer=String"
      onClick={[Function]}
    >
      <code
        className="sc-bdVaJa bGXATf"
      >
        String
      </code>
    </a>
  </div>
  <div
    className="sc-htpNat KtFsv"
  >
      
    <span
      className="sc-bxivhb bkkmIq"
    >
      field_three
    </span>
    : 
    <a
      href="/?typeExplorer=String"
      onClick={[Function]}
    >
      <code
        className="sc-bdVaJa bGXATf"
      >
        String
      </code>
    </a>
  </div>
  <div
    className="sc-htpNat KtFsv"
  >
      
    <span
      className="sc-bxivhb bkkmIq"
    >
      nested_field
    </span>
    : 
    {
    <div
      className="sc-htpNat KtFsv"
    >
          
      <span
        className="sc-bxivhb bkkmIq"
      >
        field_four_str
      </span>
      : 
      <a
        href="/?typeExplorer=String"
        onClick={[Function]}
      >
        <code
          className="sc-bdVaJa bGXATf"
        >
          String
        </code>
      </a>
    </div>
    <div
      className="sc-htpNat KtFsv"
    >
          
      <span
        className="sc-bxivhb bkkmIq"
      >
        field_five_int
      </span>
      : 
      <a
        href="/?typeExplorer=Int"
        onClick={[Function]}
      >
        <code
          className="sc-bdVaJa bGXATf"
        >
          Int
        </code>
      </a>
    </div>
    <div
      className="sc-htpNat KtFsv"
    >
          
      <span
        className="sc-bxivhb bkkmIq"
      >
        field_six_nullable_int_list
      </span>
      <span
        style={
          Object {
            "color": "#BF7326",
            "fontWeight": 500,
          }
        }
      >
        ?
      </span>
      : 
      [
      <a
        href="/?typeExplorer=Int"
        onClick={[Function]}
      >
        <code
          className="sc-bdVaJa bGXATf"
        >
          Int
        </code>
      </a>
      <span
        style={
          Object {
            "color": "#BF7326",
            "fontWeight": 500,
          }
        }
      >
        ?
      </span>
      ]
    </div>
      }
  </div>
  }
</code>
`;
